                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 07-04-2006 fixed: Incorrect first and last letters in Hebrew (and other languages) - thanks to shahar for the assistance.
 - 07-04-2006 fixed: Cleaned up headers includes in guilib.
 - 07-04-2006 fixed: Scan music could run out of memory due to caching all paths.  CDirectory::GetDirectory no longer caches paths by default.
 - 07-04-2006 added: Startup.xml support for skin intros.  The skin itself should switch to Home.xml at the appropriate time using ReplaceWindow(Home).
 - 07-04-2006 added: Better video resolution choice for playback, thanks to Markeen.
 - 06-04-2006 fixed: Skin scalings on load (eg PAL->NTSC) were truncated instead of rounded.
 - 06-04-2006 changed: changed default RSS feed in XboxMediaCenter.xml to another X-S feed
 - 06-04-2006 fixed: multiple visualisation controls on screen at same time would crash xbmc (now only first one loads)
 - 06-04-2006 fixed: [ 1458759 ] Little info screen problems
 - 06-04-2006 fixed: [ 1267265 ] Un-safe HD shutdown
 - 06-04-2006 fixed: [ 1454415 ] Philipps DVD Drive not recognized at System-Info
 - 05-04-2006 changed: use 16 byte aligned pointers in dvdplayer's libmpeg2, fixes potential crash on decoding (thou i doubt it ever happend)
 - 05-04-2006 changed: avoid closing audio device if properties didn't change, avoids ac3 reciever stuttering between audio tracks when using OTAS
 - 05-04-2006 fixed: Last.fm radio skip track.
 - 05-04-2006 changed: rss-reader useragent.
 - 05-04-2006 fixed: [ 1464756 ] script output scrolling crash
 - 05-04-2006 changed: The controls in SettingsCategory are added in the same position as their template controls.